sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/Storybank_Submitted__c.object-meta.xml
<CustomObject>
    <label>Storybank - Submitted</label>
    <nameField>
        <displayFormat>SBS-{000000}</displayFormat>
        <label>Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Storybank - Submitted</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>