sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Age_range__c.field-meta.xml
<CustomField>
    <fullName>Age_range__c</fullName>
    <label>Age Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>13-18</fullName>
            </value>
            <value>
                <fullName>19-34</fullName>
            </value>
            <value>
                <fullName>35-64</fullName>
            </value>
            <value>
                <fullName>65+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>