sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Disability__c.field-meta.xml
<CustomField>
    <fullName>Disability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disability</label>
    <type>Checkbox</type>
</CustomField>