sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <inlineHelpText>Email address of Submitter</inlineHelpText>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>