sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Embed_URL__c.field-meta.xml
<CustomField>
    <fullName>Embed_URL__c</fullName>
    <label>Embed URL</label>
    <type>Url</type>
</CustomField>