sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Experience_w_Media__c.field-meta.xml
<CustomField>
    <fullName>Experience_w_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the storyteller have experience interacting with the media?</inlineHelpText>
    <label>Experience w/ Media?</label>
    <type>Checkbox</type>
</CustomField>