sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Final_Copy__c.field-meta.xml
<CustomField>
    <fullName>Final_Copy__c</fullName>
    <label>Final Copy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>