sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/How_did_you_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_us__c</fullName>
    <label>How did you hear about us?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Family/friend</fullName>
            </value>
            <value>
                <fullName>Professional network</fullName>
            </value>
            <value>
                <fullName>Internet search</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>