sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Internal_Categories__c.field-meta.xml
<CustomField>
    <fullName>Internal_Categories__c</fullName>
    <label>Internal Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cutting Poverty in Half</fullName>
            </value>
            <value>
                <fullName>Creating Good Jobs</fullName>
            </value>
            <value>
                <fullName>Strengthening Families</fullName>
            </value>
            <value>
                <fullName>Promoting Economic Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>