sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Nominator_Address__c.field-meta.xml
<CustomField>
    <fullName>Nominator_Address__c</fullName>
    <label>Nominator Address</label>
    <type>TextArea</type>
</CustomField>