sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Nominator_City__c.field-meta.xml
<CustomField>
    <fullName>Nominator_City__c</fullName>
    <label>Nominator City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>