sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Nominator_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Nominator_Email_Address__c</fullName>
    <label>Nominator Email Address</label>
    <type>Email</type>
</CustomField>