sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Nominator_First__c.field-meta.xml
<CustomField>
    <fullName>Nominator_First__c</fullName>
    <label>Nominator First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>