sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Nominator_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Nominator_Last_Name__c</fullName>
    <label>Nominator Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>