sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Nominator_Organization__c.field-meta.xml
<CustomField>
    <fullName>Nominator_Organization__c</fullName>
    <inlineHelpText>Like &#39;Offered Organization&quot;... this is what the person submitting the form typed, not the official name of the organization this contact is associated with.</inlineHelpText>
    <label>Nominator Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>