sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Nominator_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Nominator_Postal_Code__c</fullName>
    <label>Nominator Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>