sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <label>Offered Organization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>