sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Other_Category__c.field-meta.xml
<CustomField>
    <fullName>Other_Category__c</fullName>
    <label>Other Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>