sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Post_to_Chatter__c.field-meta.xml
<CustomField>
    <fullName>Post_to_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked by WF, triggers post to Chatter group</inlineHelpText>
    <label>Post to Chatter</label>
    <type>Checkbox</type>
</CustomField>