sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Story_Summary__c.field-meta.xml
<CustomField>
    <fullName>Story_Summary__c</fullName>
    <label>Story Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>