sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Storybank_Name__c.field-meta.xml
<CustomField>
    <fullName>Storybank_Name__c</fullName>
    <label>Storybank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>