sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Storyteller_Team_Source__c.field-meta.xml
<CustomField>
    <fullName>Storyteller_Team_Source__c</fullName>
    <description>Storybank Team&#39;s name to track source of Storyteller Contact on the Contact object. Should be set by a workflow when the public form is submitted. This text value will be &#39;upserted&#39; into the Contact record&#39;s Team Source multi-value picklist.</description>
    <label>Storyteller Team Source</label>
    <length>40</length>
    <type>Text</type>
</CustomField>