sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Submission_URL__c.field-meta.xml
<CustomField>
    <fullName>Submission_URL__c</fullName>
    <inlineHelpText>URL this story was submitted from - then we can set certain defaults</inlineHelpText>
    <label>Submission URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>