sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>This is the date the story was submitted to Storybank - defaults to Today&#39;s date but can modified if capturing older stories</description>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>