sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>Storybank Team&#39;s name to track source of the story. Should be set by a workflow when the public form is submitted. This text value will be copied to the Storybank record if it is included in the Field Set.</description>
    <label>Team</label>
    <length>40</length>
    <type>Text</type>
</CustomField>