sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Team_Source__c.field-meta.xml
<CustomField>
    <fullName>Team_Source__c</fullName>
    <label>Team Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>