sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/fields/Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_URL__c</fullName>
    <inlineHelpText>URL of Video being submitted</inlineHelpText>
    <label>Video URL</label>
    <type>Url</type>
</CustomField>