sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/recordTypes/Text_Converted.recordType-meta.xml
<RecordType>
    <fullName>Text_Converted</fullName>
    <active>true</active>
    <description>For stories submitted as Text and Converted to Approved Stories</description>
    <label>Text Converted</label>
</RecordType>