sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/recordTypes/Text_Submission.recordType-meta.xml
<RecordType>
    <fullName>Text_Submission</fullName>
    <active>true</active>
    <description>For stories submitted as Text</description>
    <label>Text Submission</label>
</RecordType>