sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/recordTypes/Video_Converted.recordType-meta.xml
<RecordType>
    <fullName>Video_Converted</fullName>
    <active>true</active>
    <description>For stories submitted with link to Video and Converted to Approved Stories</description>
    <label>Video Converted</label>
</RecordType>