sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/listViews/All_Stories.listView-meta.xml
<ListView>
    <fullName>All_Stories</fullName>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Submitted_Date__c</columns>
    <columns>Category__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Phone__c</columns>
    <columns>State_pick__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Stories</label>
</ListView>