sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/listViews/Nominated_Stories.listView-meta.xml
<ListView>
    <fullName>Nominated_Stories</fullName>
    <columns>NAME</columns>
    <columns>Submitted_Date__c</columns>
    <columns>Category__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Phone__c</columns>
    <columns>State_pick__c</columns>
    <columns>Nominator_Email_Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Nominator_First__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Nominator_Last_Name__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Nominator_Email_Address__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Nominated Stories</label>
</ListView>