sfdx-source/storybank/main/default/objects/Storybank_Submitted__c/listViews/Status_Accepted_Stories.listView-meta.xml
<ListView>
    <fullName>Status_Accepted_Stories</fullName>
    <columns>NAME</columns>
    <columns>Submitted_Date__c</columns>
    <columns>Category__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Phone__c</columns>
    <columns>State_pick__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>Status - Accepted Stories</label>
</ListView>